YD-713 Addressed many SonarQube-flagged issues