@@ -7,7 +7,6 @@ package nu.yona.server.analysis.service;
 import java.time.ZonedDateTime;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonFormat;
@@ -86,7 +85,6 @@ public class AppActivitiesDto
 	@JsonIgnore
 	public List<Activity> getActivitiesSorted()
 	{
-		return Arrays.stream(activities).sorted((a1, a2) -> a1.getStartTime().compareTo(a2.getStartTime()))
-				.collect(Collectors.toList());
+		return Arrays.stream(activities).sorted((a1, a2) -> a1.getStartTime().compareTo(a2.getStartTime())).toList();
 	}
 }
